[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = click_keyring/test

[coverage:run]
branch = True
source =
    click_keyring
    tests

[coverage:paths]
source =
    click_keyring
    .tox/*/lib/python*/site-packages/click
    .tox/pypy/site-packages/click
